--- a/static/src/layout/_app.html
+++ b/static/src/layout/_app.html
@@ -55,6 +55,9 @@
     <!-- @@placeholder =js -->
     <!-- endbuild -->
 
+    <!-- @@include=_angular-component-template.tpl {"path": "/components/_c-breadcrumb.html"} -->
+    <!-- @@include=_angular-component-template.tpl {"path": "/components/_c-filter-input.html"} -->
+    <!-- @@include=_angular-component-template.tpl {"path": "/components/_c-filter-input-simple.html"} -->
     <!-- @@include=_angular-component-template.tpl {"path": "/components/_c-modal-yes-no.html"} -->
     <!-- @@include=_angular-component-template.tpl {"path": "/components/_c-nav-profile.html"} -->
     <!-- @@include=_angular-component-template.tpl {"path": "/components/_c-st-pagination.html"} -->
