--- a/static/src/layout/_js.html
+++ b/static/src/layout/_js.html
@@ -11,6 +11,7 @@
 <script src="/js/libs/angular/angular-animate.js"></script>
 <script src="/js/libs/angular/angular-cookies.js"></script>
 <script src="/js/libs/angular/angular-datepicker.js"></script>
+<script src="/js/libs/angular/angular-gettext.js"></script>
 <script src="/js/libs/angular/angular-inspinia.js"></script>
 <script src="/js/libs/angular/angular-inspinia-directives.js"></script>
 <script src="/js/libs/angular/angular-messages.js"></script>
@@ -63,21 +64,28 @@
 <!-- endbuild -->
 
 <!-- build:js /js/compiled/app.common.js -->
+<script src="/js/i18n/en.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/_5xx.interceptor.js"></script>
 <script src="/js/_403.interceptor.js"></script>
+<script src="/js/_c-breadcrumb.js"></script>
+<script src="/js/_c-filter-input.js"></script>
 <script src="/js/_c-form-remote-error.js"></script>
 <script src="/js/_c-form-remote-error-simple.js"></script>
+<script src="/js/_c-nav-profile.js"></script>
 <script src="/js/_c-st-table-controller.js"></script>
 <script src="/js/_cFormRemoteErrorsExtractor.js"></script>
+<script src="/js/_convert.js"></script>
+<script src="/js/_filter.js"></script>
 <script src="/js/_filterItem.js"></script>
-<script src="/js/_i18n.translations.js"></script>
 <script src="/js/_modal.js"></script>
 <script src="/js/_moment.js"></script>
 <script src="/js/_ngTable.js"></script>
 <script src="/js/_notify.js"></script>
 <script src="/js/_router.js"></script>
 <script src="/js/_st.js"></script>
+<script src="/js/_user.js"></script>
+<script src="/js/_userNameFilter.js"></script>
 <script src="/js/_users.js"></script>
 <script src="/js/directives.js"></script>
 <script src="/js/inspinia.js"></script>
