--- a/static/src/layout/navigation.html
+++ b/static/src/layout/navigation.html
@@ -7,11 +7,11 @@
             </li>
 
             <li>
-                <a><i class="fa fa-gear"></i> <span class="nav-label" c-translate="nav.settings.label"></span><span class="fa arrow"></span></a>
+                <a><i class="fa fa-gear"></i> <span class="nav-label" translate>Settings</span><span class="fa arrow"></span></a>
 
                 <ul class="nav nav-second-level collapse">
                     <li c-on-authority="PERM_USER_READ">
-                        <a v-href="{route: 'app.settings.users.list'}"><i class="fa fa-user"></i> <span c-translate="nav.settings.users"></span></a>
+                        <a v-href="{route: 'app.settings.users.list'}"><i class="fa fa-user"></i> <span translate>Users</span></a>
                     </li>
                 </ul>
             </li>
